--- a/linearalgebra.tex
+++ b/linearalgebra.tex
@@ -6,9 +6,9 @@
 \usepackage{wrapfig}
 \usepackage{enumitem}
 \usepackage{amsmath}
+\usepackage{amsfonts} %for using mathbb
 \usepackage{index}
 \usepackage{import}
-\usepackage{epigraph}
 
 \usepackage[bookmarks=true]{hyperref}
 \usepackage{bookmark}
@@ -20,9 +20,11 @@
 \newcommand{\innerproduct}[1]{\langle#1\rangle}
 
 \newtheorem{theorem}{Theorem}[section]
+\newtheorem{definition}{Definition}[section]
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
 \numberwithin{theorem}{subsection} % important bit
+\numberwithin{definition}{subsection} % important bit
 
 \begin{document}
 \title{\Large{\textbf{Linear Algebra: Map of theorems}}}
@@ -57,7 +59,7 @@ Pythagoras Theorem: $\norm{u+v}^2 = \norm{u}^2 + \norm{v}^2$ \bigskip
 \end{corollary}
 
 \begin{lemma}
-    Let $ \mathcal{B} = {v_1,...,v_n}$ be an orthonormal basis of $V$. Then for any $v \in V,$ \\
+    Let $ \mathcal{B} = \{v_1,...,v_n\}$ be an orthonormal basis of $V$. Then for any $v \in V,$ \\
     \begin{equation*}
         V = \innerproduct{v,v_1}v_1 + \innerproduct{v,v_2}v_2 +...+
         \innerproduct{v,v_n}v_n
@@ -66,7 +68,7 @@ Pythagoras Theorem: $\norm{u+v}^2 = \norm{u}^2 + \norm{v}^2$ \bigskip
 
 \begin{corollary}
 
-    Let $ \mathcal{B} = {v_1,...,v_n}$ be an orthonormal basis of $V$,
+    Let $ \mathcal{B} = \{v_1,...,v_n\}$ be an orthonormal basis of $V$,
     $T:V\rightarrow V$ a linear operator and $[T]_\mathcal{B} = (a_{ij})$ Then for all $i,j$ \\
     \begin{equation*}
     a_{ij}=\innerproduct{T(v_j), v_i}
@@ -125,6 +127,87 @@ is consistent, and all its solutions are least square solutions of $A\mathbf{x} 
 
 
 \subsection{Adjoint of linear operator}
+
+\begin{theorem}
+    Let $V$ be a finite dimensional inner product space over $\mathbb{F}$. If $f:V \rightarrow \mathbb{F}$ is a linear functional, then there exists a unique vector $ u \in V$ such that. 
+    \begin{equation*}
+        f(v) = \innerproduct{v,u} \qquad \text{for all } v \in V
+    \end{equation*}
+\end{theorem}
+
+\begin{theorem}
+    Let $T: V \rightarrow V$ be a linear operator on a finite dimensional inner product
+    space $V$. Then there exists a unique linear operator $T^{*}: V \rightarrow V$ such
+    that 
+        \begin{equation*}
+            \innerproduct{T(u),v} = \innerproduct{u,T^*(v)}
+        \end{equation*}
+    $T^*$ is called the adjoint of T.
+\end{theorem}
+
+\begin{theorem}
+    Let $T:V \rightarrow V$ a linear operator on a finite dimensional inner product space
+    V and B be an orthonormal basis of V. Then 
+        \begin{equation*}
+            [T^*]_\mathcal{B} = ([T]_\mathcal{B})^*
+        \end{equation*}
+        is the conjugate transpose of the matrix $[T]_\mathcal{B}$
+\end{theorem}
+
+\begin{theorem}
+    Let $T,T_1 \text{ and } T_2$ be linear operators on a finite dimensional inner product
+    space V. Then: 
+    \begin{flalign*}
+        &(i) \quad (T_1 + T_2)^* = T_1^* + T_2^* \\
+        &(ii) \quad c(T)^* = \overline{c} T^* \\
+        &(iii) \quad (T_1T_2)^* = T_2^*T_1^* \\
+        &(iv) \quad (T^*)^* = T \\
+    \end{flalign*}
+\end{theorem}
+
+\subsection{Unitary Operator}
+
+\begin{theorem}
+    Let $V$ and $W$ be a finite dimensional inner product spaces over the same field.  If
+    $f : V \rightarrow W$ is a linear transformation, the following are equivalent:
+
+    \begin{enumerate}
+        \item $\innerproduct{T(u),T(v)} = \innerproduct{u,v}$ for all $u,v \in V$. i.e. $T$ preserves inner product spaces
+        \item $T$ is an inner product space isomorphism
+        \item $T$ carries every orthonormal basis for $V$ onto an orthonormal basis for $W$
+        \item $\norm{T(v)}=\norm{v}$ for all $v \in V$.
+    \end{enumerate}
+\end{theorem}
+
+\begin{definition}
+    A unitary operator on an inner product space is an isomorphism of the space onto
+    itself.
+\end{definition}
+
+\begin{theorem}
+    Let $T$ be a linear operator on an inner product space V. Then $T$ is unitary if and
+    only if the adjoint $T^*$ of  T exists and $TT^*=T^*T = I$
+\end{theorem}
+
+\begin{theorem}
+    Let $V$ be a finite dimensional inner product space and let $T: V \rightarrow V$ be
+    a linear operator. Then $T$ is unitary if and only if the matrix of $T$ in some (or every) ordered basis is
+a unitary matrix. 
+\end{theorem}
+
+\begin{theorem}
+    (p.305)
+    For every invertible complex $n \times n$ matrix $B$, there exists a unique lower-triangular
+    matrix M with positive entries on the main diagonal such that $MB$ is unitary.
+\end{theorem}
+
+\begin{corollary}
+    (p.307)
+    Let $T^+(n)$ be the set of all complex $n \times n$ lower triangular matrices with
+    positive entries on the main diagonal. Let $U(n)$ be a group of unitary matrices. For each $B$ in $GL(n)$ there exists unique matrices $N$ and $U$ such that $N \in
+    T^+(n)$ and $U \in U(n)$.
+\end{corollary}
+
 
 
 
